fixed table spacing issue on event table

--- a/public/event.css
+++ b/public/event.css
@@ -64,12 +64,10 @@
   font-family: sans-serif;
   display: inline-block;
   position: relative;
-  clear: left;
 }
 
 .event_table, th, td {
     height: 40px;
-    width: 100%;
     padding: 5px;
     border-bottom: 1px solid #ddd;
 }
