--- a/public/global_settings.css
+++ b/public/global_settings.css
@@ -9,6 +9,10 @@ th{
   color: white;
 }
 
+ th, td {
+  width: 200px;
+}
+
 /*BUTTONS*/
 
 /*DIVS*/
